[tool.poetry]
name = "picketapi"
version = "0.1.0"
description = "The official Python library for the Picket API (https://picketapi.com/)"
authors = ["Devin Stein <devstein@seas.upenn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
